style.css
/* ... */
.mg-md {
	margin-top: 10px;
	margin-bottom: 20px;
}

.mg-lg {
	margin-top: 10px;
	margin-bottom: 40px;
}

.btn {
	margin: 0 5px 5px 0;
}

.btn.pull-right {
	margin: 0 0 5px 5px;
}

.btn-d,
.btn-d:hover,
.btn-d:focus {
	color: #fff;
	background: rgba(0, 0, 0, 0.3);
}

button {
	outline: none;
}

.btn-rd {
	border-radius: 40px;
}

.btn-clean {
	border: 1px solid rgba(0, 0, 0, 0.08);
	border-bottom-color: rgba(0, 0, 0, 0.1);
	text-shadow: 0 1px 0 rgba(0, 0, 1, 0.1);
	box-shadow: 0 1px 3px rgba(0, 0, 1, 0.25),
		inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
}

.icon-md {
	font-size: 30px;
}

.icon-lg {
	font-size: 60px;
}

.sm-shadow {
	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
}

.panel-sq,
.panel-sq .panel-heading,
.panel-sq .panel-footer {
	border-radius: 0;
}

.panel-rd {
	border-radius: 30px;
}

.panel-rd .panel-heading {
	border-radius: 29px 29px 0 0;
}

.panel-rd .panel-footer {
	border-radius: 0 0 29px 29px;
}

.form-control {
	border-color: rgba(0, 0, 0, 0.1);
	box-shadow: none;
}

.scrollToTop {
	width: 40px;
	height: 40px;
	position: fixed;
	bottom: 20px;
	right: 20px;
	opacity: 0.5;
	z-index: 500;
	transition: all 0.3s ease-in-out;
}

.scrollToTop span {
	margin-top: 6px;
}

.showScrollTop {
	font-size: 14px;
	opacity: 1;
}

a[data-lightbox] {
	position: relative;
	display: block;
	text-align: center;
}

a[data-lightbox]:hover::before {
	content: "+";
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
		Helvetica, Arial;
	font-size: 32px;
	width: 50px;
	height: 50px;
	margin-left: -25px;
	border-radius: 50%;
	background: rgba(0, 0, 0, 0.6);
	color: #fff;
	font-weight: 100;
	z-index: 1;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
}

a[data-lightbox]:hover img {
	opacity: 0.6;
	-webkit-animation-fill-mode: none;
	animation-fill-mode: none;
}

#lightbox-modal {
	display: flex;
	align-items: center;
}

#lightbox-modal .modal-dialog {
	width: 90%;
	max-width: 900px;
	margin: 0 auto 0;
}

#lightbox-modal .modal-dialog img {
	max-height: 90vh;
	margin: 0 auto;
}

.lightbox-caption {
	padding: 20px;
	color: #fff;
	background: rgba(0, 0, 0, 0.5);
	position: absolute;
	left: 15px;
	right: 15px;
	bottom: 5px;
}

.close-lightbox {
	color: #fff;
	font-size: 30px;
	position: absolute;
	top: 20px;
	right: 20px;
	z-index: 20;
	background: rgba(0, 0, 0, 0.5);
	border: none;
	line-height: 30px;
	padding: 0 9px 5px;
	opacity: 0.3;
}

.close-lightbox:hover,
.next-lightbox:hover,
.prev-lightbox:hover {
	opacity: 1;
	color: #fff;
}

.next-lightbox,
.prev-lightbox {
	font-size: 20px;
	color: rgba(255, 255, 255, 0.9);
	background: rgba(0, 0, 0, 0.5);
	transition: all 0.2s ease-in-out;
	position: absolute;
	top: 45%;
	z-index: 1;
	opacity: 0.4;
}

.next-lightbox {
	padding: 6px 8px 1px 13px;
	right: 25px;
}

.prev-lightbox {
	padding: 6px 13px 1px 10px;
	left: 25px;
}

.snapshot-lb .modal-body {
	padding-bottom: 45px;
}

.snapshot-lb .lightbox-caption {
	padding: 0;
	color: rgba(0, 0, 0, 0.5);
	background: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
label,
.btn,
a {
	font-family: "helvetica";
	font-weight: 400;
	color: #575757;
}

.container {
	max-width: 1000px;
}

.hero-bloc-text {
	font-size: 38px;
}

.hero-bloc-text-sub {
	font-size: 36px;
}

.statement-bloc-text {
	line-height: 26px;
	font-style: italic;
	font-size: 20px;
	text-align: center;
	font-weight: lighter;
	max-width: 520px;
	margin: auto auto auto auto;
}

p {
	font-size: 12px;
}

.tight-width-whitespace {
	max-width: 600px;
	margin: auto auto auto auto;
}

.h1 {
	font-size: 20px;
	font-family: "Open Sans";
}

.cta-hero {
	margin-top: 22px;
	color: #ffffff;
	text-transform: uppercase;
	padding: 12px 28px 12px 28px;
	font-size: 16px;
	font-weight: 700;
}

.social {
	max-width: 400px;
	margin: 30px auto;
}

h2 {
	font-size: 22px;
	line-height: 1.4em;
}

h3 {
	font-size: 15px;
	text-transform: uppercase;
	font-weight: 700;
	color: #333333;
}

.med-width-whitespace {
	max-width: 800px;
	margin: auto auto auto auto;
	box-shadow: 0px 0px 0px #000000;
}

h1 {
	color: #333333;
}

h4 {
	color: #333333;
}

.icons {
	margin-bottom: 14px;
	margin-top: 24px;
}

.white {
	color: #ffffff;
}

.portfolio-thumb {
	margin-bottom: 24px;
}

.portfolio-row {
	margin-bottom: 44px;
	margin-top: 50px;
}

.avatar {
	box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
}

.black-background {
	background-color: rgba(165, 147, 99, 0.7);
	padding: 40px 40px 40px 40px;
}

.bold-link {
	font-weight: 900;
	text-decoration: underline;
}

.bgc-white {
	background-color: #ffffff;
}

.bgc-dark-slate-blue {
	background-color: #364577;
}

.bgc-atomic-tangerine {
	background-color: #bf5921;
}

.tc-white {
	color: #bf5921;
}

.btn-atomic-tangerine {
	background: #bf5921;
	color: #ffffff;
}

.btn-atomic-tangerine:hover {
	background: #c27956;
	color: #ffffff;
}

.ltc-white {
	color: #ffffff;
}

.ltc-white:hover {
	color: #cccccc;
}

.ltc-atomic-tangerine {
	color: #bf5921;
}

.ltc-atomic-tangerine:hover {
	color: #c27956;
}

.icon-dark-slate-blue {
	color: #364577;
	border-color: #364577;
}

.bg-dots-bg {
	background-image: url("img/dots-bg.png");
}

.bg-lines-h2-bg {
	background-image: url("img/lines-h2-bg.png");
}

.bg-banniere {
	background-image: url("img/agence-la-panthere.jpg");
}

.bg-presentation {
	background-image: url("img/image-de-presentation.jpg");
}

@media (max-width: 1024px) {
	.bloc {
		padding-left: 20px;
		padding-right: 20px;
	}
	.bloc.full-width-bloc,
	.bloc-tile-2.full-width-bloc .container,
	.bloc-tile-3.full-width-bloc .container,
	.bloc-tile-4.full-width-bloc .container {
		padding-left: 0;
		padding-right: 0;
	}
}

@media (max-width: 992px) and (min-width: 768px) {
	.navbar .nav {
		max-width: 80%;
	}
	.nav-center.navbar .nav {
		max-width: 100%;
	}
}

@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
	.b-parallax {
		background-attachment: scroll;
	}
}
/* ... */

